[tool.poetry]
name = "babu"
version = "0.1.0"
description = "A static site generator for Python"
authors = ["Leigh Brenecki <leigh@brenecki.id.au>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
